Dashboardpage with page parameters